examples/macro-tests/tests/fail/14_service_invalid_scheduling.rs
use service_daemon::service;

#[service(scheduling = Unknown)] // This should fail
async fn invalid_service() -> anyhow::Result<()> {
    Ok(())
}

fn main() {}
